trying to get css modules working

--- a/client/ui/elements/MenuButton.module.css
+++ b/client/ui/elements/MenuButton.module.css
@@ -1,7 +1,7 @@
-.menu-button {
+.menu {
   padding-inline: 1rem;
   padding-block: 0.5rem;
 }
-.menu-button:hover {
+.menu:hover {
   color: red;
 }
